--- a/BlazorBattles/Client/BlazorBattles.Client.csproj
+++ b/BlazorBattles/Client/BlazorBattles.Client.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.Toast" Version="3.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.12" PrivateAssets="all" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
@@ -12,6 +13,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Shared\BlazorBattles.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Pages\Build - Copy.razor.cs">
+      <DependentUpon>Build.razor.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
