--- a/BlazorBattles/Client/BlazorBattles.Client.csproj
+++ b/BlazorBattles/Client/BlazorBattles.Client.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
     <PackageReference Include="Blazored.Toast" Version="3.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.12" PrivateAssets="all" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
@@ -16,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Pages\Authentication\Login - Copy.razor.cs">
+      <DependentUpon>Login.razor.cs</DependentUpon>
+    </Compile>
     <Compile Update="Pages\Build - Copy.razor.cs">
       <DependentUpon>Build.razor.cs</DependentUpon>
     </Compile>
