--- a/BlazorBattles/Server/appsettings.json
+++ b/BlazorBattles/Server/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "IdentityServer": {
+    "Clients": {
+      "BlazorBattles.Client": {
+        "Profile": "IdentityServerSPA"
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
